--- a/བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག.mw
+++ b/བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག.mw
@@ -1,1 +1,35 @@
-<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
+[[Image:BhutanSamdrupJongkhar.png|right|thumb]]
+
+'''བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག'''
+
+འབྲུག་གི་རྫོང་ཁག [[འབྲུག་ཡུལ་]]
+
+
+== ཁོར་ཡུག ==
+== མགྲོན་ཁང་། ==
+== ལོ་རྒྱུས། ==
+== ལྗོངས་རྒྱུ། ==
+== ཡུལ་ཚོ། ==
+==མིང་ཐོགས་ཚུལ།==
+== དུས་ཆེན། ==
+== མི་སྣ། ==
+
+== པར་རིས་བར་འཁྱམས། ==
+<center>
+<gallery>
+
+
+
+</gallery>
+</center>
+== ཟིན་ཐོ་འམ་དཔྱད་གཞི། ==
+== དཔྱད་གཞིའི་དཀར་ཆག། ==
+== ད་དུང་གཟིགས། ==
+== ཕྱི་ཕྱོགས་དྲྭ་མཐུད། ==
+
+*[http://www.samdrupjongkhar.gov.bt  བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག]
+*[http://www.bhutan.gov.bt/government/dzongkhags.php?dz_id=29  འབྲུག་གི་འཛུལ་སྒོ་ བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག]
+
+{{stub}}
+
+[[Category:འབྲུག་གི་རྫོང་ཁག]]
