--- a/རྩི་རང་རྫོང་ཁག.mw
+++ b/རྩི་རང་རྫོང་ཁག.mw
@@ -1,28 +1,1 @@
-[[File:BhutanTsirang.png|right|thumb]]
-
-== ཁོར་ཡུག ==
-== མགྲོན་ཁང་། ==
-== ལོ་རྒྱུས། ==
-== ལྗོངས་རྒྱུ། ==
-== ཡུལ་ཚོ། ==
-==མིང་ཐོགས་ཚུལ།==
-== དུས་ཆེན། ==
-== མི་སྣ། ==
-
-== པར་རིས་བར་འཁྱམས། ==
-<center>
-<gallery>
-
-
-
-</gallery>
-</center>
-== ཟིན་ཐོ་འམ་དཔྱད་གཞི། ==
-== དཔྱད་གཞིའི་དཀར་ཆག། ==
-== ད་དུང་གཟིགས། ==
-== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
-
-* [http://www.tsirang.gov.bt རྩི་རང་རྫོང་ཁག]
-* [http://www.bhutan.gov.bt/government/dzongkhags.php?dz_id=37 འབྲུག་གི་འཛུལ་སྒོ་ རྩི་རང་རྫོང་ཁག]
-
-[[Category:འབྲུག་གི་རྫོང་ཁག]]
+<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
